<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="TcoMitsubishiRobotics_Status_v_1_x_x" Id="{af80ec8e-ff31-052c-362d-3adb4a3ebbc5}">
    <Declaration><![CDATA[TYPE TcoMitsubishiRobotics_Status_v_1_x_x :
STRUCT
	ActionDescription : STRING(100);	
	State:TcoMitsubishiRobotics_State_v_1_x_x;


END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>